fix(Chat): Apply new scrollbar to the commands menu

--- a/components/tailored/commands/preview/Preview.less
+++ b/components/tailored/commands/preview/Preview.less
@@ -10,8 +10,7 @@
   z-index: @base-z-index;
 
   #commands {
-    max-height: 7.5rem;
-    overflow-y: scroll;
+    height: 7.5rem;
   }
 
   .command {
